# lms_pec_jogja

./: .gitignore  Dockerfile  README.md  fly.toml  manage.py  pyproject.toml
accounts/: forms.py  models.py  urls.py  views.py
accounts/templates/accounts/: login.html  register.html
chatbot/: admin.py  forms.py  tests.py  urls.py  views.py
chatbot/intents/: faq.py  feedback.py  greetings.py
chatbot/middleware/: chatbot_middleware.py
chatbot/responses/: faq.py  feedback.py  greetings.py
chatbot/templates/chatbot/: chatbot.html
chatbot/utils/: data_utils.py  nlp_utils.py
core/: settings.py
courses/: admin.py  models.py  urls.py  views.py
courses/templates/courses/: course_detail.html  course_list.html  create_course.html
discussions/: admin.py  forms.py  models.py  urls.py  views.py
discussions/templates/discussions/: create_discussion.html  delete_course.html  discussion_detail.html  discussion_list.html
lms_pec_jogja/: asgi.py  settings.py  urls.py  wsgi.py
quizzes/: admin.py  forms.py  models.py  urls.py  views.py
quizzes/templates/quizzes/: create_quiz.htm  quiz_detail.html  quiz_list.html
static/css/: style.css
templates/: about.html  base.html  home.html
templates/dashboard/: admin_dashboard.html  instructor_dashboard.html  student_dashboard.html
utils/: helpers.py
virtual_classroom/: admin.py  forms.py  models.py  urls.py  views.py
virtual_classroom/templates/virtual_classroom/: class_detail.html  class_list.html  create_class.html
