[tool.poetry]
name = "lms-pec-jogja"
version = "0.1.0"
description = ""
authors = ["sandikodev <androxoss@hotmail.com>"]
readme = "README.md"
packages = [{include = "lms_pec_jogja"}]

[tool.poetry.dependencies]
python = "^3.9"
gunicorn = "^21.2.0"
django = "^4.2.3"
mysqlclient = "^2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
